fix the misaligned radio buttons

--- a/productMods/css/scholars-vis/keywordcloud/kwcloud.css
+++ b/productMods/css/scholars-vis/keywordcloud/kwcloud.css
@@ -31,4 +31,6 @@
  .d3-tip {
      z-index: 4;
  }
-
+.radio-inline-override {
+	margin-top: 0 !important;
+}
